--- a/abstract-semantics.tex
+++ b/abstract-semantics.tex
@@ -6,7 +6,7 @@
 In this section we present the formal semantics of our state-centric
 replication scheme with linearized merges. As the informal development
 from previous section suggests, our replication scheme is strongly
-inspired by version control systems (VCS) such as Git~\cite{git}.  We
+inspired by version control systems (VCS) such as Git.  We
 embrace this analogy in our formal development to manifest distributed
 executions over replicated state with help of an abstract ``Git''
 machine building a well-formed version history graph.  We show that
