--- a/evaluation.tex
+++ b/evaluation.tex
@@ -5,7 +5,7 @@ We present an evaluation study of our runtime-assisted approach to
 convergent RDTs with help of our prototype \quark implementation. The
 benchmark we chose for the study is a collaborative document editing
 application -- a common usecase addressed by several CRDT
-proposals~\cite{rga, treedoc, lagoot, lseq}. However, unlike these
+proposals~\cite{rga, treedoc, crdts}. However, unlike these
 other approaches, we did not have to build a dedicated replicated data
 type to represent collaboratively-edited documents; an ordinary
 document format extended with a merge operation would suffice. While
@@ -50,35 +50,58 @@ new versions on the local branch in the background while the user is
 busy editing an older version. When the user attempts to write their
 version of the document to the store, simply committing it would
 effectively override the concurrent updates from other users obtained
-via background merges. This problem is depicted in
-Fig.~\ref{fig:local-merge}. The solution, fortunately, is
-straightforward: we \emph{merge} the user-submitted value with the
-(value of) the latest version on the local branch to create a new
-version that includes the updates from either direction. The LCA for
-this merge is simply the last version on the local branch read by the
-user. This merge need not be synchronized as it doesn't alter the LCAs
-between any two branches. The merged value can then returned
-to the user as the result of the write.  \quark's \C{write} is a
-function of type $\texttt{Value} \rightarrow \texttt{Value}$, where
-$\texttt{Value}$ is \C{doc} in the current application.
+via background merges. The solution, fortunately, is straightforward:
+we \emph{merge} the user-submitted value with the (value of) the
+latest version on the local branch to create a new version that
+includes the updates from either direction. 
+% The LCA for this merge is
+% simply the last version on the local branch read by the user. This
+% merge need not be synchronized as it doesn't alter the LCAs between
+% any two branches. The merged value can then returned to the user as
+% the result of the write.  \quark's \C{write} is a function of type
+$\texttt{Value} \rightarrow \texttt{Value}$, where $\texttt{Value}$ is
+\C{doc} in the current application.
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[scale=0.3]{Figures/latency}
+\caption{Latency of collaborative editing operations under \quark vs
+  executing them with strong consistency (SC). }
+\label{fig:latency}
+\end{figure}
 
 To measure the impact of \quark runtime on user writes, we measure the
 latency of the \C{write} operation, which includes for the time spent
 merging the user version with the current version, and persisting the
-resultant version to the store. To conduct the experiments, we deploy
-a three-node cluster of \C{i3.large} machines in Amazon \C{us-west2}
+resultant version to the store. We conduct the experiments on a
+three-node cluster of \C{i3.large} machines in Amazon \C{us-west2}
 data center. Each user connects to one of the machines and performs
 1000 edits in succession, saving the document after each edit. We
 progressively increase the number of concurrent users editing the
-document from 3 to 300 and measure the impact of the increased
-concurrency on write latency. We report three values of latency for
-each run -- one each for the 10th percentile, 50th percentile, and
-90th percentile.  Fig.~\ref{fig:latency} shows the results. As evident
-from the figure, latency of \quark writes remain mostly constant,
-increasing only slightly between $n=3$ to $n=300$.
-Fig.~\ref{fig:latency} also plots the latency values for the baseline
-``SC'' approach which achieves convergence by synchronizing each
-operation, i.e., executing under strong consistency.
+document from 3 to 60 and measure the impact of the increased
+concurrency on write latency. Fig.~\ref{fig:latency} shows the median
+latency values. As evident from the figure, latency of \quark writes
+constant with the median latency around 0.008s. The maximum latency
+ever measured for a \quark writes is 0.016s. Notably, the latency
+values are an order of magnitude less than the time between
+consecutive edits (0.25s), which lets users see their edits almost
+immediately. Fig.~\ref{fig:latency} also plots the latency values for
+the baseline ``SC'' approach which achieves convergence by
+synchronizing each operation, i.e., executing under strong
+consistency. The SC write latency increases super-linearly with the
+median value of 1.76s for 60 concurrent editors. The maximum latency
+measured for an SC write is 9.02s, which is considerably more than the
+inter-edit latency of 0.25s. The experiment confirms the theory that
+convergence does not come at the cost of latency in \quark.
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[scale=0.3]{Figures/staleness}
+\caption{Staleness increases as the number of concurrent editors
+  increase.}
+\label{fig:staleness}
+  \vspace*{-0.2in}
+\end{figure}
 
 \quark system replicates the contents of each branch across all the
 replicas as fast as the network allows. However, for a user $A$ to
@@ -98,21 +121,21 @@ $v$ is is merged into a remote branch $b$ at a later time $t'$, the
 difference $t' - t$ denotes the staleness of $v$ w.r.t the new version
 on $b$. Multiple such staleness measurements are recorded for each
 experiment and analyzed to compute the 10th, 50th, and 90th percentile
-values. Fig.~\ref{fig:staleness} shows the results as we repeat
-experiments with increasing number of concurrent users. While
+values. Fig.~\ref{fig:staleness} shows the results. While
 staleness remains in the order of milliseconds with fewer ($\leq 9$)
 concurrent users, it increases super-linearly as we increase the
-number of collaborators by 3 until 30. While increased staleness is
-inevitable in our approach due to synchronized merges, we believe the
-increase can be contained by choosing the order of merges to avoid the
-``starvation'' of some branches. Note that relaxing the
-linearizability constraint on merges would completely eliminate the
-staleness overhead, but the resultant Git-like system fails to
-converge due to anomalous executions described in
+number of collaborators in the multiples of 3 until 30. While
+increased staleness is inevitable in our approach due to synchronized
+merges, we believe the increase can be contained by choosing the order
+of merges to avoid the ``starvation'' of some branches. Note that
+relaxing the linearizability constraint on merges would completely
+eliminate the staleness overhead, but the resultant Git-like system
+fails to converge due to anomalous executions described in
 Sec.~\ref{sec:motivation}\footnote{
   Git admits anamolous version history graphs where two branches can
   have the same set of commits and yet differ in their final version.
-  Appendix describes two such cases we observed on Github}. 
+  Supplementary material describes two such cases we observed on
+  Github.}. 
 
 Our experiments bring to the fore an inherent tradeoff among the
 competing concerns of RDTs, namely (\rom{1}). The ease of programming
