--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-\label{sec:intro}
+\label{sec:introduction}
 
 Large-scale web services and decentralized applications often rely on
 geo-distributed state replication to meet their latency and availability
@@ -149,7 +149,7 @@ below:
 
   \item We formalize the aforementioned constraints in the context of
     a an abstract machine (named \quark) that manifests distributed
-    executions as version history graphs (similar to Git~\cite{git}).
+    executions as version history graphs (similar to Git).
     We prove the \emph{convergence} and \emph{progress} properties of
     the \quark abstract machine that together guarantee its soundness.
     The formalization has been mechanized in Ivy~\cite{ivy} and
