--- a/concrete-semantics.tex
+++ b/concrete-semantics.tex
@@ -95,15 +95,18 @@ Fig.~\ref{fig:quark-semantics}.
 
 \paragraph{Rules} The transition relation $\qstepsto$ of the \quark
 distributed machine is defined in Fig.~\ref{fig:quark-semantics}.
-There is one rule corresponding to every rule in
-Fig.~\ref{fig:git-semantics} (abstract semantics). \rulelabel{Commit}
-describes replica $i$ committing a new version on the branch $b_i$
-with the given value $n$.  The vector $t'$ for the new version is
-obtained from that of the previous version $t$ by incrementing the
-component $b_i$. The sequence number of the new version on $b_i$ is
-$t'(b_i)$ and the branch map $B_i$ is updated to reflect that. Note
-that for all $j \neq i$, $H_j$ and $B_j$ remain unchanged indicating
-that other replicas are not (yet) aware of this commit.
+Every transition rule of the abstract machine
+(Fig.~\ref{fig:git-semantics}) has a corresponding rule for the
+abstract machine. Fig.~\ref{fig:quark-semantics} however elides
+\rulelabel{Fork} and \rulelabel{FastFwd} in the interest of space.
+The rule \rulelabel{Commit} describes replica $i$ committing a new
+version on the branch $b_i$ with the given value $n$.  The vector $t'$
+for the new version is obtained from that of the previous version $t$
+by incrementing the component $b_i$. The sequence number of the new
+version on $b_i$ is $t'(b_i)$ and the branch map $B_i$ is updated to
+reflect that. Note that for all $j \neq i$, $H_j$ and $B_j$ remain
+unchanged indicating that other replicas are not (yet) aware of this
+commit.
 %
 \rulelabel{Fork} forks off a new branch $b_j$ from $b_i$. A new
 replica $j$ is assumed to take over $b_j$. The version vector $t'$ of
@@ -134,8 +137,8 @@ concurrent \rulelabel{Commit}. A remote replica $k$ is allowed to keep
 committing new versions on to $b_k$ even as it remains unaware of the
 merge on replica $i$. Such leniency is imperative if the system were
 to retain the performance benefits of asynchronous replication.
-\rulelabel{FastFwd} is similar to \rulelabel{Merge}, so we don't
-discuss it separately.
+% \rulelabel{FastFwd} is similar to \rulelabel{Merge}, so we don't
+% discuss it separately.
 
 The rule \rulelabel{Sync} captures asynchronous communication between
 a pair of replicas ($i$ and $j$) to get one of them ($i$) up-to-date
@@ -147,13 +150,19 @@ from $k$, i.e., $H_j(b_k)$ happens to be ahead of $H_i(b_k)$. The new
 versions on $b_k$ known to $j$ but not $i$ are then simply replicated
 at $i$.
 
+\paragraph{Properties} The Unique LCA
+(Lemma~\ref{lem:lca-uniqueness}), Convergence
+(Theorem~\ref{thm:convergence}, and Progress
+(Theorem~\ref{thm:progress}) properties have been re-defined for the
+\quark distributed machine and automatically proven correct in
+Ivy~\cite{ivy}. 
+
 \paragraph{Garbage Collection} One downside of the distributed
 semantics in Fig.~\ref{fig:quark-semantics} is that maps $B$ and $N$
 that together track the version history grow monotonically as the
 execution progresses and new versions are created. Fortunately, this
-is easy to address as the execution only needs version history
-inasmuch as it is required to obtain the LCA versions for
-\rulelabel{Merge}. Since LCA version vectors monotonically increase,
+is easy to address as the execution only needs finite version history
+to compute LCAs. Since LCA version vectors monotonically increase,
 older versions with vectors less than the least known LCA vector can
 simply be garbage-collected. Moreover, a replica can make this
 decision locally without having to synchronize with its peers. In
