--- a/quark.tex
+++ b/quark.tex
@@ -160,8 +160,9 @@
   orchestrates \emph{well-formed } executions that are guaranteed to
   converge. Despite the utilization of a runtime, our approach comes
   at no additional cost of latency and availability. We implement our
-  approach in a system called \quark and evaluate its performance over
-  a large-scale collaborative editing application. 
+  approach in a system called \quark and conduct a thorough evaluation
+  of its performance over a large-scale collaborative editing
+  application. 
 \end{abstract}
 
 
@@ -240,7 +241,5 @@
 %% Appendix
 % \appendix
 % \section{Appendix}
-
-Text of appendix \ldots
 
 \end{document}
