Committing last minute edits.

--- a/introduction.tex
+++ b/introduction.tex
@@ -152,8 +152,8 @@ below:
     executions as version history graphs (similar to Git).
     We prove the \emph{convergence} and \emph{progress} properties of
     the \quark abstract machine that together guarantee its soundness.
-    The formalization has been mechanized in Ivy~\cite{ivy} and
-    \emph{automatically} verified with help of Z3~\cite{z3}. To the
+    The formalization has also been mechanized in Ivy~\cite{ivy} and
+    automatically verified with help of Z3~\cite{z3}. To the
     best of our knowledge, this is the first time an SMT solver was
     used to verify the \emph{meta-theory} of a formal system.
 
